lib/common/libs/polygonidcore/native_polygonidcore.dart


  late final _PLGNBabyJubJubVerifyPoseidonPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNBabyJubJubVerifyPoseidon');
  late final _PLGNBabyJubJubVerifyPoseidon =
      _PLGNBabyJubJubVerifyPoseidonPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNBabyJubJubPrivate2Public(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubPrivate2Public(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNBabyJubJubPrivate2PublicPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNBabyJubJubPrivate2Public');
  late final _PLGNBabyJubJubPrivate2Public =
      _PLGNBabyJubJubPrivate2PublicPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNBabyJubJubPublicUncompress(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubPublicUncompress(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNBabyJubJubPublicUncompressPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNBabyJubJubPublicUncompress');
  late final _PLGNBabyJubJubPublicUncompress =
      _PLGNBabyJubJubPublicUncompressPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();

  int PLGNBabyJubJubPublicCompress(
    ffi.Pointer<ffi.Pointer<ffi.Char>> jsonResponse,
    ffi.Pointer<ffi.Char> in1,
    ffi.Pointer<ffi.Char> cfg,
    ffi.Pointer<ffi.Pointer<PLGNStatus>> status,
  ) {
    return _PLGNBabyJubJubPublicCompress(
      jsonResponse,
      in1,
      cfg,
      status,
    );
  }

  late final _PLGNBabyJubJubPublicCompressPtr = _lookup<
          ffi.NativeFunction<
              GoUint8 Function(
                  ffi.Pointer<ffi.Pointer<ffi.Char>>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Pointer<PLGNStatus>>)>>(
      'PLGNBabyJubJubPublicCompress');
  late final _PLGNBabyJubJubPublicCompress =
      _PLGNBabyJubJubPublicCompressPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<PLGNStatus>>)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

enum idtype_t {
  P_ALL(0),
  P_PID(1),
  P_PGID(2);

  final int value;
  const idtype_t(this.value);

  static idtype_t fromValue(int value) => switch (value) {
        0 => P_ALL,
        1 => P_PID,
        2 => P_PGID,
        _ => throw ArgumentError("Unknown value for idtype_t: $value"),
      };
}

final class sigval extends ffi.Union {
  @ffi.Int()
  external int sival_int;

  external ffi.Pointer<ffi.Void> sival_ptr;
}

final class __sigaction_u extends ffi.Union {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>
      __sa_handler;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int, ffi.Pointer<__siginfo>, ffi.Pointer<ffi.Void>)>>
      __sa_sigaction;
}

final class __siginfo extends ffi.Struct {
  @ffi.Int()
  external int si_signo;

  @ffi.Int()
  external int si_errno;

  @ffi.Int()
  external int si_code;

  @pid_t()
  external int si_pid;

  @uid_t()
  external int si_uid;

  @ffi.Int()
  external int si_status;

  external ffi.Pointer<ffi.Void> si_addr;

  external sigval si_value;

  @ffi.Long()
  external int si_band;

  @ffi.Array.multi([7])
  external ffi.Array<ffi.UnsignedLong> __pad;
}

typedef pid_t = __darwin_pid_t;
typedef __darwin_pid_t = __int32_t;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef uid_t = __darwin_uid_t;
typedef __darwin_uid_t = __uint32_t;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;

final class wait extends ffi.Opaque {}

enum PLGNStatusCode {
  PLGNSTATUSCODE_ERROR(0),
  PLGNSTATUSCODE_NIL_POINTER(1),
  PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_EXTRACTION_ERROR(2),
  PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_RESOLVE_ERROR(3),
  PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_BUILD_ERROR(4),
  PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_STATE_ERROR(5),
  PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_REVOKED_ERROR(6),
  PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_EXTRACTION_ERROR(7),
  PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_RESOLVE_ERROR(8),
  PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_BUILD_ERROR(9),
  PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_STATE_ERROR(10),
  PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_REVOKED_ERROR(11);

  final int value;
  const PLGNStatusCode(this.value);

  static PLGNStatusCode fromValue(int value) => switch (value) {
        0 => PLGNSTATUSCODE_ERROR,
        1 => PLGNSTATUSCODE_NIL_POINTER,
        2 => PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_EXTRACTION_ERROR,
        3 => PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_RESOLVE_ERROR,
        4 => PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_BUILD_ERROR,
        5 => PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_STATE_ERROR,
        6 => PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_REVOKED_ERROR,
        7 => PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_EXTRACTION_ERROR,
        8 => PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_RESOLVE_ERROR,
        9 => PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_BUILD_ERROR,
        10 => PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_STATE_ERROR,
        11 => PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_REVOKED_ERROR,
        _ => throw ArgumentError("Unknown value for PLGNStatusCode: $value"),
      };
}

typedef GoUint8 = ffi.UnsignedChar;
typedef DartGoUint8 = int;
typedef PLGNStatus = _PLGNStatus;

final class _PLGNStatus extends ffi.Struct {
  @ffi.UnsignedInt()
  external int statusAsInt;

  PLGNStatusCode get status => PLGNStatusCode.fromValue(statusAsInt);

  external ffi.Pointer<ffi.Char> error_msg;
}

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;

const int __API_TO_BE_DEPRECATED = 100000;

const int __API_TO_BE_DEPRECATED_MACOS = 100000;

const int __API_TO_BE_DEPRECATED_IOS = 100000;

const int __API_TO_BE_DEPRECATED_MACCATALYST = 100000;

const int __API_TO_BE_DEPRECATED_WATCHOS = 100000;

const int __API_TO_BE_DEPRECATED_TVOS = 100000;

const int __API_TO_BE_DEPRECATED_DRIVERKIT = 100000;

const int __API_TO_BE_DEPRECATED_VISIONOS = 100000;

const int __MAC_10_0 = 1000;

const int __MAC_10_1 = 1010;

const int __MAC_10_2 = 1020;

const int __MAC_10_3 = 1030;

const int __MAC_10_4 = 1040;

const int __MAC_10_5 = 1050;

const int __MAC_10_6 = 1060;

const int __MAC_10_7 = 1070;

const int __MAC_10_8 = 1080;

const int __MAC_10_9 = 1090;

const int __MAC_10_10 = 101000;

const int __MAC_10_10_2 = 101002;

const int __MAC_10_10_3 = 101003;

const int __MAC_10_11 = 101100;

const int __MAC_10_11_2 = 101102;

const int __MAC_10_11_3 = 101103;

const int __MAC_10_11_4 = 101104;

const int __MAC_10_12 = 101200;

const int __MAC_10_12_1 = 101201;

const int __MAC_10_12_2 = 101202;

const int __MAC_10_12_4 = 101204;

const int __MAC_10_13 = 101300;

const int __MAC_10_13_1 = 101301;

const int __MAC_10_13_2 = 101302;

const int __MAC_10_13_4 = 101304;

const int __MAC_10_14 = 101400;

const int __MAC_10_14_1 = 101401;

const int __MAC_10_14_4 = 101404;

const int __MAC_10_14_5 = 101405;

const int __MAC_10_14_6 = 101406;

const int __MAC_10_15 = 101500;

const int __MAC_10_15_1 = 101501;

const int __MAC_10_15_4 = 101504;

const int __MAC_10_16 = 101600;

const int __MAC_11_0 = 110000;

const int __MAC_11_1 = 110100;

const int __MAC_11_3 = 110300;

const int __MAC_11_4 = 110400;

const int __MAC_11_5 = 110500;

const int __MAC_11_6 = 110600;

const int __MAC_12_0 = 120000;

const int __MAC_12_1 = 120100;

const int __MAC_12_2 = 120200;

const int __MAC_12_3 = 120300;

const int __MAC_12_4 = 120400;

const int __MAC_12_5 = 120500;

const int __MAC_12_6 = 120600;

const int __MAC_12_7 = 120700;

const int __MAC_13_0 = 130000;

const int __MAC_13_1 = 130100;

const int __MAC_13_2 = 130200;

const int __MAC_13_3 = 130300;

const int __MAC_13_4 = 130400;

const int __MAC_13_5 = 130500;

const int __MAC_13_6 = 130600;

const int __MAC_14_0 = 140000;

const int __MAC_14_1 = 140100;

const int __MAC_14_2 = 140200;

const int __MAC_14_3 = 140300;

const int __MAC_14_4 = 140400;

const int __MAC_14_5 = 140500;

const int __MAC_15_0 = 150000;

const int __MAC_15_1 = 150100;

const int __MAC_15_2 = 150200;

const int __IPHONE_2_0 = 20000;

const int __IPHONE_2_1 = 20100;

const int __IPHONE_2_2 = 20200;

const int __IPHONE_3_0 = 30000;

const int __IPHONE_3_1 = 30100;

const int __IPHONE_3_2 = 30200;

const int __IPHONE_4_0 = 40000;

const int __IPHONE_4_1 = 40100;

const int __IPHONE_4_2 = 40200;

const int __IPHONE_4_3 = 40300;

const int __IPHONE_5_0 = 50000;

const int __IPHONE_5_1 = 50100;

const int __IPHONE_6_0 = 60000;

const int __IPHONE_6_1 = 60100;

const int __IPHONE_7_0 = 70000;

const int __IPHONE_7_1 = 70100;

const int __IPHONE_8_0 = 80000;

const int __IPHONE_8_1 = 80100;

const int __IPHONE_8_2 = 80200;

const int __IPHONE_8_3 = 80300;

const int __IPHONE_8_4 = 80400;

const int __IPHONE_9_0 = 90000;

const int __IPHONE_9_1 = 90100;

const int __IPHONE_9_2 = 90200;

const int __IPHONE_9_3 = 90300;

const int __IPHONE_10_0 = 100000;
